--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: ruby
 rvm:
   - 2.4
 cache: bundler
-script: bundle exec bin/rails test
+script: bundle exec bin/rake test
 env:
   - DISABLE_SPRING=1
+
+before_run:
+  - cp config/database.travis.yml config/database.yml
+
 services:
   - mysql
