--- a/config/database.travis.yml
+++ b/config/database.travis.yml
@@ -3,5 +3,6 @@ test:
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: 127.0.0.1
   username: root
   password:
