--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script: bundle exec bin/rake test
 env:
   - DISABLE_SPRING=1
 
-before_run:
+before_install:
   - cp config/database.travis.yml config/database.yml
 
 services:
