--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: ruby
 rvm:
   - 2.4
 cache: bundler
-script: bundle exec bin/rake test
+script: bundle exec rake test
 env:
   - DISABLE_SPRING=1
 
 before_install:
   - cp config/database.travis.yml config/database.yml
+  - bundle exec rake db:create
 
 services:
   - mysql
