--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "homepage": "https://github.com/github-interviews/gitgrub-reviews#readme",
   "dependencies": {
+    "@rails/webpacker": "^3.0.2",
+    "coffeescript": "1.12.7",
     "primer-css": "9.6.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.9.4"
   }
 }
