--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
+*.gif binary
+*.zip binary
+*.ico binary
